--- a/views/signup.html
+++ b/views/signup.html
@@ -12,15 +12,28 @@
     <link rel="stylesheet" type="text/css" href="../CSS/util.css">
     <link rel="stylesheet" type="text/css" href="../CSS/loginstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--===============================================================================================-->
 
 </head>
+<div id="anojs-night-sky" style="width: 100%; height: 100%;"></div>
+</a>
+<style>
+    .material-icons:hover{
+        cursor: pointer;
 
-<body>
+    }
+</style>
+
+
+<body style="overflow: none;">
+    <script src="http://anojs.com/files/anojs-night-sky.js?"></script>
 
 
 
-    <div class="limiter">
+
+    <div class="limiter" style="position: absolute; top: 0;">
+
         <div class="container-login100" style="background-image: url('images/bg-01.jpg');">
             <div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
                 <form class="login100-form validate-form flex-sb flex-w">
